# hdf5-dataclass

./: README.md  pyproject.toml  scratchpad.ipynb
examples/: test.py
hdf5_dataclass/: __init__.py  hdf5_dataclass.py  utils.py
hdf5_serialiser/: __init__.py
