[tool.poetry]
name = "hdf5-dataclass"
version = "0.1.0"
description = ""
authors = ["Marcin Krupowicz <ma@rcin.me>"]
readme = "README.md"
packages = [{include = "hdf5_dataclass"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
h5py = "^3.7.0"
numpy = "^1.24.0"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"
